--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
     </section>
     <section>
       <h2>Our Process</h2>
-      <img src="" alt="">
+      <img src="css\identify.svg" alt="">
       <h3 class="mid">Identify</h3>
       <p>
         We focus on the most important details.
       </p>
-      <img src="" alt="">
+      <img src="css\understand.svg" alt="">
       <h3 class="mid">Understand</h3>
       <p>
         We study our projects inside and out.
       </p>
-      <img src="" alt="">
+      <img src="css\execute.svg" alt="">
       <h3 class="mid">Execute</h3>
       <p>
         We put everything we have into our work.
@@ -49,7 +49,8 @@
       </p>
     </section>
     <p id="footer">
-      &copy; Broadway 2017 Home About Work Team Contact
+      &copy; Broadway 2017 <a href="#">Home</a> <a href="">About</a>
+      <a href="#">Work</a> <a href="#">Team</a> <a href="#">Contact</a>
     </p>
   </body>
 </html>
