--- a/index.html
+++ b/index.html
@@ -3,32 +3,32 @@
   <head>
     <meta charset="utf-8">
     <title>Broadway Design</title>
-    <link rel="stylesheet" href="/css/master.css">
+    <link  href="css\index.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <section id="header">
       <h1>Broadway Design</h1>
       <br  />
       <br  />
-      <a href="#">Home</a>
-      <a href="#">Process</a>
-      <a href="#">Work</a>
-      <a href="#">Team</a>
+      <a href="#">Home</a><br /><br />
+      <a href="#">Process</a><br /><br />
+      <a href="#">Work</a><br /><br />
+      <a href="#">Team</a><br /><br />
       <a href="">Contact</a>
     </section>
     <section>
       <h2>Our Process</h2>
-      <img src="css\identify.svg" alt="">
+      <img src="css\resources\identify.svg" alt="">
       <h3 class="mid">Identify</h3>
       <p>
         We focus on the most important details.
       </p>
-      <img src="css\understand.svg" alt="">
+      <img src="css\resources\understand.svg" alt="">
       <h3 class="mid">Understand</h3>
       <p>
         We study our projects inside and out.
       </p>
-      <img src="css\execute.svg" alt="">
+      <img src="css\resources\execute.svg" alt="">
       <h3 class="mid">Execute</h3>
       <p>
         We put everything we have into our work.
@@ -44,8 +44,8 @@
       </p>
       <h3 class="mid">Contact</h3>
       <p>
-        Phone: (555)-555-5555<br  />Email: test@example.com
-        <br  />Twitter: @test
+        Phone: (555)-555-5555<br  /><br />
+        Email: test@example.com<br /><br  />Twitter: @test
       </p>
     </section>
     <p id="footer">
